Adress and home page update

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://blindo97.github.io/portfolio/",
+  "homepage": "https://ege-incedogan.github.io/portfolio/",
   "name": "portfolio",
   "private": true,
   "version": "0.0.0",
